--- a/ServiceLabs/app/src/main/AndroidManifest.xml
+++ b/ServiceLabs/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name="com.doranco.services.MyService"></service>
     </application>
 
 </manifest>
